--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-    <script defer src="/libraries/p5.min.js"></script>
-    <script defer src="/libraries/p5.sound.min.js"></script>
-    <script defer src="/libraries/sketch.js"></script>
+    <script defer src="../libraries/p5.min.js"></script>
+    <script defer src="../libraries/p5.sound.min.js"></script>
+    <script defer src="../libraries/sketch.js"></script>
     
     <style>
       canvas {
