--- a/html/question1.html
+++ b/html/question1.html
@@ -14,6 +14,9 @@
         <div class="contents">
           <div class="topBar">
             <div class="progress" id="progress1">1/12</div>
+            <div class="pbar">
+              <progress value="'0" max="12" id="probar"></progress>
+            </div>
             <div class="main">조별과제에서 당신이 더 선호하는 일은?</div>
           </div>
           <div class="bottomBar">
