feat: 다시 테스트하기 기능 추가

--- a/html/result.html
+++ b/html/result.html
@@ -15,8 +15,9 @@
       <p id="result-ex">결과 안내 설명</p>
       <div id="result-share-container">
         <a href="#" id="result-share" onclick="clip(); return false"
-          >결과를 다른사람들에게 공유해보세요!</a
+          >테스트 결과 공유하기</a
         >
+        <a href="index.html" id="result-return">다시 테스트 하기</a>
         <!-- ㅇㅈ -->
       </div>
     </div>
