--- a/html/result.html
+++ b/html/result.html
@@ -17,8 +17,7 @@
         <a href="#" id="result-share" onclick="clip(); return false"
           >테스트 결과 공유하기</a
         >
-        <a href="index.html" id="result-return">다시 테스트 하기</a>
-        <!-- ㅇㅈ -->
+        <a href="../index.html" id="result-return">다시 테스트 하기</a>
       </div>
     </div>
   </body>
