--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <img src="https://cdn-icons-png.flaticon.com/512/2482/2482264.png" width="200px"/ class="icon">
       <p class="title2">나에게 맞는 개발 성향을 알아보세요!</p><br>
       <div class="button-area">
-        <a href="question1.html"data-text="START"></a>
+        <a href="../html/question1.html"data-text="START"></a>
     </div>
   </body>
 </html>
