--- a/html/question1.html
+++ b/html/question1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/question.css" />
+    <link rel="stylesheet" href="/dev-test/css/question.css" />
     <title>Document</title>
-    <script defer src="../javascript/question.js"></script>
+    <script defer src="/dev-test/javascript/question.js"></script>
   </head>
   <body>
     <div class="wrapper">
