--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/dev-test/css/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-    <script defer src="../libraries/p5.min.js"></script>
-    <script defer src="../libraries/p5.sound.min.js"></script>
-    <script defer src="../libraries/sketch.js"></script>
+    <script defer src="/dev-test/libraries/p5.min.js"></script>
+    <script defer src="/dev-test/libraries/p5.sound.min.js"></script>
+    <script defer src="/dev-test/libraries/sketch.js"></script>
     
     <style>
       canvas {
@@ -29,7 +29,7 @@
       <img src="https://cdn-icons-png.flaticon.com/512/2482/2482264.png" width="200px"/ class="icon">
       <p class="title2">나에게 맞는 개발 성향을 알아보세요!</p><br>
       <div class="button-area">
-        <a href="../html/question1.html"data-text="START"></a>
+        <a href="/dev-test/html/question1.html"data-text="START"></a>
     </div>
   </body>
 </html>
